Annual Report 2025: v1 - complete implementation including all sections and images

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -46,9 +46,6 @@
 		</div>
 	</section>
 
-
-
-
 	<!-- Two-Column Intro -->
 	<section class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
 		<div class="relative w-full h-full flex items-center justify-center aspect-video md:aspect-auto">
@@ -100,13 +97,13 @@
 			class="absolute -top-4 right-6 w-24 h-auto z-0 xl:right-12" />
 		<div class="relative z-10 mx-auto">
 			<div class="grid gap-6 md:grid-cols-2 md:grid-rows-[auto_1fr] md:items-start" id="quote-reliability-grid">
-				<img src="assets/images/annual-report/focused-on-reliability.svg" alt="Focused on Reliability"
+				<img src="assets/images/annual-report/focused-on-reliability.png" alt="Focused on Reliability"
 					class="md:col-start-1 md:row-start-1" />
 				<img src="assets/images/annual-report/chris.png" alt="Chris Pink, Senior Vice President of Operations"
 					class="size-52 mx-auto md:size-auto md:row-span-2 md:col-start-2 md:max-w-full lg:max-w-sm">
 				<div class="relative pl-8 -mx-2 md:col-start-1 md:row-start-2">
 					<img src="assets/images/annual-report/quote-mark.svg" alt="" aria-hidden="true"
-						class="absolute -top-2 left-0 size-8" />
+						class="absolute -top-1 left-0 size-6" />
 					<p class="text-xl italic font-light text-white">
 						We are building new transmission lines, entering a regional transmission organization,
 						and investing in various generating resources. These are exciting times."
@@ -125,14 +122,14 @@
 			class="absolute top-4 left-6 w-24 h-auto z-0 md:top-auto md:bottom-4 xl:left-12" />
 		<div class="relative z-10 mx-auto">
 			<div class="grid gap-6 md:grid-cols-2 md:grid-rows-[auto_1fr] md:items-start" id="quote-reliability-grid">
-				<img src="assets/images/annual-report/focused-on-reliability.svg" alt="Focused on Reliability"
+				<img src="assets/images/annual-report/focused-on-financial-future.png" alt="Focused on Financial"
 					class="md:col-start-2 md:row-start-1" />
 				<img src="assets/images/annual-report/todd.png"
 					alt="Todd Telesz, Senior Vice President and Chief Financial Officer"
 					class="size-52 mx-auto md:size-auto md:row-span-2 md:col-start-1 md:max-w-full lg:max-w-sm">
 				<div class="relative pl-8 -mx-2 md:col-start-2 md:row-start-2">
 					<img src="assets/images/annual-report/quote-mark.svg" alt="" aria-hidden="true"
-						class="absolute -top-2 left-0 size-8" />
+						class="absolute -top-1 left-0 size-6" />
 					<p class="text-xl italic font-light text-white">
 						Several foundational aspects of our finances
 						came together in 2024, allowing us to focus on
@@ -153,16 +150,17 @@
 				clean sources in 2030.</span></h3>
 
 		<div
-			class="relative mx-auto flex justify-center gap-6 md:gap-12 md:grid md:grid-cols-3 md:max-w-lg text-slate-600">
-			<div class="grid gap-2 text-center">
+			class="relative mx-auto flex justify-between px-4 uppercase md:justify-center md:divide-x md:divide-[#6EA3A2] text-[#6EA3A2]">
+
+			<div class="grid gap-2 text-center md:px-12">
 				<div class="text-2xl md:text-3xl"><stat-value class="text-4xl md:text-6xl">36</stat-value>%</div>
 				<div class="md:text-2xl">in 2024</div>
 			</div>
-			<div class="grid gap-2 text-center">
+			<div class="grid gap-2 text-center md:px-12">
 				<div class="text-2xl md:text-3xl"><stat-value class="text-4xl md:text-6xl">50</stat-value>%</div>
 				<div class="md:text-2xl">in late 2025</div>
 			</div>
-			<div class="grid gap-2 text-center">
+			<div class="grid gap-2 text-center md:px-12">
 				<div class="text-2xl md:text-3xl"><stat-value class="text-4xl md:text-6xl">70</stat-value>%</div>
 				<div class="md:text-2xl">in 2030</div>
 			</div>
@@ -171,43 +169,134 @@
 	</section>
 
 	<!-- Feature: Preserving History -->
-	<section class="px-4 py-16 max-w-3xl mx-auto text-center">
-		<h3 class="text-lg uppercase tracking-widest text-gray-500 mb-2">Preserving History</h3>
-		<p class="text-base">
-			Tri-State and partners are reducing wildfire risks while protecting the rich archaeological and cultural
-			significance in Canyons of the Ancients.
-		</p>
-		<a href="#" class="mt-4 inline-block underline text-blue-700">Read about our fire mitigation efforts here</a>
+	<section class="">
+		<div class="lg:relative lg:aspect-auto lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:min-h-[600px]">
+
+			<div class="relative w-full aspect-[3/4] md:aspect-square md:pt-32 md:pb-6 lg:contents">
+				<img src="assets/images/annual-report/ts-fm-cortez-3795-web.jpg"
+					alt="Scenic power lines in Canyons of the Ancients"
+					class="absolute inset-0 w-full h-full object-cover z-0" style="object-position: 20%;" />
+
+				<div
+					class="relative z-10 flex flex-col items-start justify-end h-full px-4 pb-12 space-y-4 lg:contents">
+					<div class="ml-8 w-32 relative md:w-52 lg:col-start-1 lg:row-start-2 lg:self-center lg:ml-20">
+						<img src="assets/images/annual-report/better-together-rays.svg" alt="Logo rays"
+							class="absolute inset-0" />
+						<img src="assets/images/annual-report/better-together-text.svg" alt="We are better together"
+							class="" />
+					</div>
+					<img src="assets/images/annual-report/preserving-history.svg" alt="Preserving History heading"
+						class="md:w-4/5 relative lg:col-start-2 lg:row-start-1 lg:self-center lg:z-10" />
+				</div>
+			</div>
+
+			<div
+				class="relative bg-[#BDAD89] px-6 py-10 lg:bg-transparent lg:px-0 lg:py-0 lg:col-start-2 lg:row-start-2 lg:self-center">
+				<div class="text-base max-w-md mx-auto text-white lg:max-w-sm">
+					<p>
+						Tri-State and partners are reducing wildfire risks while protecting the rich archaeological and
+						cultural
+						significance in Canyons of the Ancients.
+					</p>
+					<a href="#" class="block mt-4 text-white">Read about our fire mitigation efforts here</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Cooperative Principles -->
+	<section class="px-8 py-24 relative">
+		<div class="max-w-md mx-auto md:grid md:grid-cols-2 md:gap-8 md:max-w-full">
+			<img src="assets/images/annual-report/cooperative-strength-line.svg"
+				class="absolute left-0 bottom-4 h-16 w-full max-w-md" style="outline: 0px solid" />
+
+			<div class="lg:pl-12 lg:max-w-sm">
+				<img src="assets/images/annual-report/flexing.svg" alt="Flexing Our Cooperative Strength"
+					class="mx-auto mb-4 w-full max-w-52 md:max-w-64 lg:max-w-72" />
+				<p class="text-balance mb-6 text-xl text-gray-700 lg:text-2xl">Our actions are guided by our Cooperative
+					Principles.
+				</p>
+			</div>
+			<div>
+				<ul class="m-0 p-0 flex flex-col gap-2 overflow-hidden" data-animate-bullets>
+					<li class="flex items-start gap-2 transition-none">
+						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+							alt="Plus Icon" class="size-4 mt-1">
+						Voluntary and Open Membership
+					</li>
+					<li class="flex items-start gap-2 transition-none">
+						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+							alt="Plus Icon" class="size-4 mt-1">
+						Members’ Economic Participation
+					</li>
+					<li class="flex items-start gap-2 transition-none">
+						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+							alt="Plus Icon" class="size-4 mt-1">
+						Autonomy and Independence
+					</li>
+					<li class="flex items-start gap-2 transition-none">
+						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+							alt="Plus Icon" class="size-4 mt-1">
+						Democratic Member Control
+					</li>
+					<li class="flex items-start gap-2 transition-none">
+						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+							alt="Plus Icon" class="size-4 mt-1">
+						Education, Training and Information
+					</li>
+					<li class="flex items-start gap-2 transition-none">
+						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+							alt="Plus Icon" class="size-4 mt-1">
+						Cooperation Among Cooperatives
+					</li>
+					<li class="flex items-start gap-2 transition-none">
+						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
+							alt="Plus Icon" class="size-4 mt-1">
+						Concern for Community
+					</li>
+				</ul>
+			</div>
+		</div>
 	</section>
 
 
 
 	<!-- Podcast Promotion -->
-	<section class="px-4 py-16 max-w-3xl mx-auto text-center">
-		<h3 class="text-lg uppercase tracking-widest text-gray-500 mb-2">What Does It Take to Power Rural America?</h3>
-		<p class="text-base mb-4">
-			Join host Elizabeth Schilling as she uncovers bold ideas and personal stories at the Tri-State Annual
-			Meeting
-			with cooperative leaders.
-		</p>
-		<a href="#" class="inline-block underline text-blue-700">Listen to Western Watts here</a>
+	<section class="grid md:grid-cols-2">
+		<!-- Image -->
+		<div class="relative aspect-[4/3] md:aspect-auto md:order-last lg:aspect-[4/3]">
+			<img src="assets/images/annual-report/western-watts-promo-shot-web.jpg" alt="Western Watts Promo Shot"
+				class="absolute inset-0 w-full h-full object-cover" />
+			<img src="assets/images/annual-report/western-watts-logo.svg" alt="Western Watts logo"
+				class="absolute bottom-6 left-1/2 -translate-x-1/2 w-36 max-w-xs" />
+		</div>
+
+		<!-- Content -->
+		<div class="bg-[#BDAD89] px-6 pt-12 p-16 flex flex-col justify-center text-white lg:p-16">
+			<div class="flex items-start gap-4 mb-4">
+
+				<h3 class="text-2xl font-semibold leading-tight m-0">
+					WHAT DOES IT<br />TAKE TO POWER<br />RURAL AMERICA?
+				</h3>
+
+				<div class="h-full flex items-stretch">
+					<img src="assets/images/annual-report/microphone.svg" alt="Microphone icon"
+						class="h-full object-contain" />
+				</div>
+			</div>
+			<p class="mb-4 text-xl">
+				Join host Elizabeth Schilling as she uncovers bold ideas and personal stories at the Tri-State Annual
+				Meeting with cooperative leaders.
+			</p>
+			<a href="#" class="underline text-white">Listen to Western Watts here</a>
+		</div>
 	</section>
 
 
 
-	<!-- Cooperative Principles -->
-	<section class="px-4 py-16 max-w-4xl mx-auto text-center">
-		<h3 class="text-xl font-semibold mb-4">Flexing Our Cooperative Strength</h3>
-		<ul class="grid gap-2 md:grid-cols-2 text-left list-disc list-inside mx-auto w-fit">
-			<li>Voluntary and Open Membership</li>
-			<li>Members’ Economic Participation</li>
-			<li>Autonomy and Independence</li>
-			<li>Democratic Member Control</li>
-			<li>Education, Training and Information</li>
-			<li>Cooperation Among Cooperatives</li>
-			<li>Concern for Community</li>
-		</ul>
-	</section>
+
+
 
 </body>
 
