AR: Add link to home page

--- a/index.htm
+++ b/index.htm
@@ -114,6 +114,11 @@
 								class="text-slate-900 hover:underline">Annual Report 2024</a></dt>
 						<dd class="text-sm text-slate-500">Feb 11, 2025</dd>
 					</div>
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./annual-report-2025.htm" target="_blank"
+								class="text-slate-900 hover:underline">Annual Report 2025</a></dt>
+						<dd class="text-sm text-slate-500">May 12, 2025</dd>
+					</div>
 				</dl>
 			</li>
 			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
