--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -14,7 +14,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
-		href="https://fonts.googleapis.com/css?family=Aleo:300,300italic,700,regular,700italic,italic|Sarabun:100,300,300italic,500,500italic,700,700italic,regular,italic,800,800italic&subset=latin,latin-ext"
+		href="https://fonts.googleapis.com/css?family=Aleo:300,300italic,700,regular,700italic,italic|Sarabun:100,300,400,300italic,500,500italic,700,700italic,regular,italic,800,800italic&subset=latin,latin-ext"
 		rel="stylesheet">
 	<link rel="stylesheet"
 		href="https://tristate.coop/sites/default/files/css/css_z5ZMP6J7ncjZtOs_I63qX6QwGU6XHgkiNo030ifdVBc.css" />
@@ -38,10 +38,14 @@
 	<!-- Hero Banner -->
 	<section
 		class="relative w-full aspect-[3/2] flex items-center justify-center text-white md:aspect-video lg:aspect-[3/1] xl:h-[400px]">
-		<img src="./assets/images/annual-report/header.png" alt="Camera Lens Background"
+		<img src="./assets/images/annual-report/header-web.jpg" alt="Camera Lens Background"
 			class="absolute inset-0 w-full h-full object-cover z-0" />
-		<div class="relative z-10 mx-6 text-left md:w-4/5 md:max-w-md">
-			<div class="tracking-widest uppercase">Coming Into</div>
+		<img src="assets/images/annual-report/header-graphic-top.svg" alt="" srcset=""
+			class="absolute top-4 left-0 aspect-[300/55] w-1/3 md:w-80">
+		<img src="assets/images/annual-report/header-graphic-bottom.svg" alt="" srcset=""
+			class="absolute bottom-0 right-6 aspect-[76/150] h-12 md:h-1/4 lg:h-1/3 ">
+		<div class="relative z-10 mx-6 text-left translate-y-4 md:w-4/5 md:max-w-md">
+			<img src="./assets/images/annual-report/coming-into.svg" alt="Coming into" class="w-2/5" />
 			<img src="./assets/images/annual-report/focus.png" alt="Focus Text" />
 		</div>
 	</section>
@@ -60,10 +64,10 @@
 			</a>
 		</div>
 		<div class="flex flex-col justify-center gap-4 px-4 md:py-16">
-			<div class="size-24 md:mx-0">
+			<div class="size-28 md:mx-0">
 				<img src="assets/images/annual-report/tsgt-appeture.svg" alt="TSGT" class="w-full h-auto" />
 			</div>
-			<h2 class="m-0 text-2xl font-serif font-light">Focused on Our Path Forward</h2>
+			<h2 class="m-0 text-2xl font-serif font-normal">Focused on Our Path Forward</h2>
 			<p class="text-base">
 				The value of Tri-State membership is unrivaled. Together with our members, we are focused on our
 				mission,
@@ -96,48 +100,54 @@
 		<img src="assets/images/annual-report/aperture-mobile.png" alt="" aria-hidden="true"
 			class="absolute -top-4 right-6 w-24 h-auto z-0 xl:right-12" />
 		<div class="relative z-10 mx-auto">
-			<div class="grid gap-6 md:grid-cols-2 md:grid-rows-[auto_1fr] md:items-start" id="quote-reliability-grid">
-				<img src="assets/images/annual-report/focused-on-reliability.png" alt="Focused on Reliability"
-					class="md:col-start-1 md:row-start-1" />
+			<div class="grid gap-6 md:grid-cols-2">
 				<img src="assets/images/annual-report/chris.png" alt="Chris Pink, Senior Vice President of Operations"
-					class="size-52 mx-auto md:size-auto md:row-span-2 md:col-start-2 md:max-w-full lg:max-w-sm">
-				<div class="relative pl-8 -mx-2 md:col-start-1 md:row-start-2">
-					<img src="assets/images/annual-report/quote-mark.svg" alt="" aria-hidden="true"
-						class="absolute -top-1 left-0 size-6" />
-					<p class="text-xl italic font-light text-white">
-						We are building new transmission lines, entering a regional transmission organization,
-						and investing in various generating resources. These are exciting times."
-					</p>
-					<a href="#" class="inline-block underline text-white md:col-start-1 md:row-start-2">Read our
-						Q&A
-						with Chris Pink</a>
+					class="size-52 mx-auto md:size-auto md:order-last md:max-w-full lg:max-w-sm">
+				<div class="contents md:flex md:flex-col md:justify-center md:gap-8 lg:pl-8 xl:gap-12">
+					<img src="assets/images/annual-report/focused-on-reliability.png" alt="Focused on Reliability"
+						class="order-first" />
+					<div class="relative pl-8 -mx-2">
+						<img src="assets/images/annual-report/quote-mark.svg" alt="" aria-hidden="true"
+							class="absolute -top-1 left-0 size-6" />
+						<p class="text-xl font-light text-white">
+							We are building new transmission lines, entering a regional transmission organization,
+							and investing in various generating resources. These are exciting times."
+						</p>
+						<a href="#" class="inline-block underline text-white">Read our Q&A with Chris Pink, SVP
+							Operations</a>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
 
 	<!-- Quote: Financial Future -->
 	<section class="bg-[#6EA3A2] relative px-4 py-16 overflow-hidden md:pl-8 md:pr-12">
 		<img src="assets/images/annual-report/four-point-flower-mobile.png" alt="" aria-hidden="true"
 			class="absolute top-4 left-6 w-24 h-auto z-0 md:top-auto md:bottom-4 xl:left-12" />
 		<div class="relative z-10 mx-auto">
-			<div class="grid gap-6 md:grid-cols-2 md:grid-rows-[auto_1fr] md:items-start" id="quote-reliability-grid">
-				<img src="assets/images/annual-report/focused-on-financial-future.png" alt="Focused on Financial"
-					class="md:col-start-2 md:row-start-1" />
+			<div class="grid gap-6 md:grid-cols-2">
 				<img src="assets/images/annual-report/todd.png"
 					alt="Todd Telesz, Senior Vice President and Chief Financial Officer"
-					class="size-52 mx-auto md:size-auto md:row-span-2 md:col-start-1 md:max-w-full lg:max-w-sm">
-				<div class="relative pl-8 -mx-2 md:col-start-2 md:row-start-2">
-					<img src="assets/images/annual-report/quote-mark.svg" alt="" aria-hidden="true"
-						class="absolute -top-1 left-0 size-6" />
-					<p class="text-xl italic font-light text-white">
-						Several foundational aspects of our finances
-						came together in 2024, allowing us to focus on
-						our mission of providing reliable, affordable
-						and responsible power to our members.”
-					</p>
-					<a href="#" class="inline-block underline text-white md:col-start-1 md:row-start-2">Read our Q&A
-						with Todd Telesz, SVP/CFO</a>
+					class="size-52 mx-auto md:size-auto md:max-w-full lg:max-w-sm">
+				<div class="contents md:flex md:flex-col md:justify-center md:gap-8 lg:pr-8 xl:gap-12">
+
+					<img src="assets/images/annual-report/focused-on-financial-future.png" alt="Focused on Financial"
+						class="order-first xl:-ml-8" />
+
+					<div class="relative pl-8 -mx-2">
+						<img src="assets/images/annual-report/quote-mark.svg" alt="" aria-hidden="true"
+							class="absolute -top-1 left-0 size-6" />
+						<p class="text-xl font-light text-white">
+							Several foundational aspects of our finances
+							came together in 2024, allowing us to focus on
+							our mission of providing reliable, affordable
+							and responsible power to our members.”
+						</p>
+						<a href="#" class="inline-block underline text-white md:col-start-1 md:row-start-2">Read our Q&A
+							with Todd Telesz, SVP/CFO</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -145,24 +155,32 @@
 
 	<!-- Stats Block -->
 	<section class="px-4 py-16 bg-gray-100 text-center">
-		<h3 class="text-xl mb-6 uppercase"><span class="block font-semibold">70% of our members’ energy mix</span> <span
-				class="block font-light">will come from
+		<h3 class="text-xl mb-6 uppercase md:text-2xl  lg:text-3xl "><span class="block font-semibold text-balance">70%
+				of our
+				members’ energy
+				mix</span> <span class="block font-light text-balance">will come from
 				clean sources in 2030.</span></h3>
 
 		<div
 			class="relative mx-auto flex justify-between px-4 uppercase md:justify-center md:divide-x md:divide-[#6EA3A2] text-[#6EA3A2]">
 
 			<div class="grid gap-2 text-center md:px-12">
-				<div class="text-2xl md:text-3xl"><stat-value class="text-4xl md:text-6xl">36</stat-value>%</div>
-				<div class="md:text-2xl">in 2024</div>
+				<div class="text-2xl md:text-4xl lg:text-5xl"><stat-value
+						class="text-4xl md:text-7xl lg:text-8xl">36</stat-value>%
+				</div>
+				<div class="md:text-2xl lg:text-3xl">in 2024</div>
 			</div>
 			<div class="grid gap-2 text-center md:px-12">
-				<div class="text-2xl md:text-3xl"><stat-value class="text-4xl md:text-6xl">50</stat-value>%</div>
-				<div class="md:text-2xl">in late 2025</div>
+				<div class="text-2xl md:text-4xl lg:text-5xl"><stat-value
+						class="text-4xl md:text-7xl lg:text-8xl">50</stat-value>%
+				</div>
+				<div class="md:text-2xl lg:text-3xl">in late 2025</div>
 			</div>
 			<div class="grid gap-2 text-center md:px-12">
-				<div class="text-2xl md:text-3xl"><stat-value class="text-4xl md:text-6xl">70</stat-value>%</div>
-				<div class="md:text-2xl">in 2030</div>
+				<div class="text-2xl md:text-4xl lg:text-5xl"><stat-value
+						class="text-4xl md:text-7xl lg:text-8xl">70</stat-value>%
+				</div>
+				<div class="md:text-2xl lg:text-3xl">in 2030</div>
 			</div>
 		</div>
 
@@ -192,7 +210,7 @@
 
 			<div
 				class="relative bg-[#BDAD89] px-6 py-10 lg:bg-transparent lg:px-0 lg:py-0 lg:col-start-2 lg:row-start-2 lg:self-center">
-				<div class="text-base max-w-md mx-auto text-white lg:max-w-sm">
+				<div class="text-lg max-w-md mx-auto text-white lg:max-w-sm lg:font-semibold lg:text-xl">
 					<p>
 						Tri-State and partners are reducing wildfire risks while protecting the rich archaeological and
 						cultural
@@ -206,56 +224,56 @@
 
 
 	<!-- Cooperative Principles -->
-	<section class="px-8 py-24 relative">
+	<section class="px-8 py-24 relative md:pl-0">
 		<div class="max-w-md mx-auto md:grid md:grid-cols-2 md:gap-8 md:max-w-full">
-			<img src="assets/images/annual-report/cooperative-strength-line.svg"
-				class="absolute left-0 bottom-4 h-16 w-full max-w-md" style="outline: 0px solid" />
 
-			<div class="lg:pl-12 lg:max-w-sm">
-				<img src="assets/images/annual-report/flexing.svg" alt="Flexing Our Cooperative Strength"
-					class="mx-auto mb-4 w-full max-w-52 md:max-w-64 lg:max-w-72" />
-				<p class="text-balance mb-6 text-xl text-gray-700 lg:text-2xl">Our actions are guided by our Cooperative
-					Principles.
-				</p>
+			<div class="md:relative md:pl-8 lg:pl-12">
+				<img src="assets/images/annual-report/cooperative-strength-line.svg"
+					class="absolute left-0 bottom-4 h-12 w-full lg:h-16 lg:max-w-96 lg:-bottom-8"
+					style="outline: 0px solid" />
+				<div class="lg:max-w-sm">
+
+					<img src="assets/images/annual-report/flexing.svg" alt="Flexing Our Cooperative Strength"
+						class="mx-auto mb-4 w-full max-w-52 md:max-w-64 lg:max-w-72" />
+					<p class="font-light text-balance mb-6 text-xl text-gray-700 lg:text-2xl">Our actions are guided by
+						our
+						Cooperative
+						Principles.
+					</p>
+				</div>
 			</div>
 			<div>
-				<ul class="m-0 p-0 flex flex-col gap-2 overflow-hidden" data-animate-bullets>
+				<ul class="m-0 p-0 flex flex-col gap-4 overflow-hidden uppercase" data-animate-bullets>
 					<li class="flex items-start gap-2 transition-none">
-						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
-							alt="Plus Icon" class="size-4 mt-1">
+						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
 						Voluntary and Open Membership
 					</li>
 					<li class="flex items-start gap-2 transition-none">
-						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
-							alt="Plus Icon" class="size-4 mt-1">
+						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
 						Members’ Economic Participation
 					</li>
 					<li class="flex items-start gap-2 transition-none">
-						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
-							alt="Plus Icon" class="size-4 mt-1">
+						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
 						Autonomy and Independence
 					</li>
 					<li class="flex items-start gap-2 transition-none">
-						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
-							alt="Plus Icon" class="size-4 mt-1">
+						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
 						Democratic Member Control
 					</li>
 					<li class="flex items-start gap-2 transition-none">
-						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
-							alt="Plus Icon" class="size-4 mt-1">
+						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
 						Education, Training and Information
 					</li>
 					<li class="flex items-start gap-2 transition-none">
-						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
-							alt="Plus Icon" class="size-4 mt-1">
+						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
 						Cooperation Among Cooperatives
 					</li>
 					<li class="flex items-start gap-2 transition-none">
-						<img src="https://tristate.coop/sites/default/files/images/annual-report/2024/plus-solid.svg"
-							alt="Plus Icon" class="size-4 mt-1">
+						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
 						Concern for Community
 					</li>
 				</ul>
+
 			</div>
 		</div>
 	</section>
