AR: v3 edits from KB
Resized "Focus" in header.  New trimmed svg files.  Placeholder header and podcast images (not renamed).  Resized WW logo.

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -38,13 +38,13 @@
 	<!-- Hero Banner -->
 	<section
 		class="relative w-full aspect-[3/2] flex items-center justify-center text-white md:aspect-video lg:aspect-[3/1] xl:h-[400px]">
-		<img src="./assets/images/annual-report/header-web.jpg" alt="Camera Lens Background"
+		<img src="./assets/images/annual-report/Header_crop.jpg" alt="Camera Lens Background"
 			class="absolute inset-0 w-full h-full object-cover z-0" />
 		<img src="assets/images/annual-report/header-graphic-top.svg" alt="" srcset=""
 			class="absolute top-4 left-0 aspect-[300/55] w-1/3 md:w-80">
 		<img src="assets/images/annual-report/header-graphic-bottom.svg" alt="" srcset=""
 			class="absolute bottom-0 right-6 aspect-[76/150] h-12 md:h-1/4 lg:h-1/3 ">
-		<div class="relative z-10 mx-6 text-left translate-y-4 md:w-4/5 md:max-w-md">
+		<div class="relative z-10 mx-6 text-left translate-y-4 md:w-4/5 md:max-w-lg">
 			<img src="./assets/images/annual-report/coming-into.svg" alt="Coming into" class="w-2/5" />
 			<img src="./assets/images/annual-report/focus.png" alt="Focus Text" />
 		</div>
@@ -229,16 +229,12 @@
 
 			<div class="md:relative md:pl-8 lg:pl-12">
 				<img src="assets/images/annual-report/cooperative-strength-line.svg"
-					class="absolute left-0 bottom-4 h-12 w-full lg:h-16 lg:max-w-96 lg:-bottom-8"
-					style="outline: 0px solid" />
+					class="absolute left-0 bottom-4 h-12 w-full pr-8 md:p-0 lg:h-16 lg:max-w-md lg:-bottom-8" />
 				<div class="lg:max-w-sm">
-
 					<img src="assets/images/annual-report/flexing.svg" alt="Flexing Our Cooperative Strength"
 						class="mx-auto mb-4 w-full max-w-52 md:max-w-64 lg:max-w-72" />
-					<p class="font-light text-balance mb-6 text-xl text-gray-700 lg:text-2xl">Our actions are guided by
-						our
-						Cooperative
-						Principles.
+					<p class="font-light text-balance mb-6 text-xl text-gray-700 lg:text-2xl">
+						Our actions are guided by our Cooperative Principles.
 					</p>
 				</div>
 			</div>
@@ -283,15 +279,15 @@
 	<!-- Podcast Promotion -->
 	<section class="grid md:grid-cols-2">
 		<!-- Image -->
-		<div class="relative aspect-[4/3] md:aspect-auto md:order-last lg:aspect-[4/3]">
-			<img src="assets/images/annual-report/western-watts-promo-shot-web.jpg" alt="Western Watts Promo Shot"
+		<div class="relative aspect-[4/3] md:aspect-auto md:order-last">
+			<img src="assets/images/annual-report/Podcast-600x600.png" alt="Western Watts Promo Shot"
 				class="absolute inset-0 w-full h-full object-cover" />
 			<img src="assets/images/annual-report/western-watts-logo.svg" alt="Western Watts logo"
-				class="absolute bottom-6 left-1/2 -translate-x-1/2 w-36 max-w-xs" />
+				class="absolute bottom-6 left-1/2 -translate-x-1/2 w-44 lg:w-52" />
 		</div>
 
 		<!-- Content -->
-		<div class="bg-[#BDAD89] px-6 pt-12 p-16 flex flex-col justify-center text-white lg:p-16">
+		<div class="bg-[#BDAD89] px-6 pt-12 p-16 flex flex-col justify-center text-white lg:px-16 lg:py-28">
 			<div class="flex items-start gap-4 mb-4">
 
 				<h3 class="text-2xl font-semibold leading-tight m-0">
