AR: Small adjustment on "Focus"

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -41,10 +41,10 @@
 		<img src="./assets/images/annual-report/Header_crop.jpg" alt="Camera Lens Background"
 			class="absolute inset-0 w-full h-full object-cover z-0" />
 		<img src="assets/images/annual-report/header-graphic-top.svg" alt="" srcset=""
-			class="absolute top-4 left-0 aspect-[300/55] w-1/3 md:w-80">
+			class="absolute top-4 left-0 w-1/3 md:w-80" style="aspect-ratio:300/55;">
 		<img src="assets/images/annual-report/header-graphic-bottom.svg" alt="" srcset=""
-			class="absolute bottom-0 right-6 aspect-[76/150] h-12 md:h-1/4 lg:h-1/3 ">
-		<div class="relative z-10 mx-6 text-left translate-y-4 md:w-4/5 md:max-w-lg">
+			class="absolute bottom-0 right-6 h-12 md:h-1/4 lg:h-1/3" style="aspect-ratio:76/150;">
+		<div class="relative z-10 mx-6 text-left translate-y-4 md:w-4/5 md:max-w-lg lg:max-w-2xl">
 			<img src="./assets/images/annual-report/coming-into.svg" alt="Coming into" class="w-2/5" />
 			<img src="./assets/images/annual-report/focus.png" alt="Focus Text" />
 		</div>
