--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -38,20 +38,22 @@
 	<!-- Hero Banner -->
 	<section
 		class="relative w-full aspect-[3/2] flex items-center justify-center text-white md:aspect-video lg:aspect-[3/1] xl:h-[400px]">
-		<img src="./assets/images/annual-report/Header_crop.jpg" alt="Camera Lens Background"
+		<img src="./assets/images/annual-report/header-web.jpg" alt="Camera Lens Background"
 			class="absolute inset-0 w-full h-full object-cover z-0" />
 		<img src="assets/images/annual-report/header-graphic-top.svg" alt="" srcset=""
 			class="absolute top-4 left-0 w-1/3 md:w-80" style="aspect-ratio:300/55;">
 		<img src="assets/images/annual-report/header-graphic-bottom.svg" alt="" srcset=""
 			class="absolute bottom-0 right-6 h-12 md:h-1/4 lg:h-1/3" style="aspect-ratio:76/150;">
 		<div class="relative z-10 mx-6 text-left translate-y-4 md:w-4/5 md:max-w-lg lg:max-w-2xl">
-			<img src="./assets/images/annual-report/coming-into.svg" alt="Coming into" class="w-2/5" />
-			<img src="./assets/images/annual-report/focus.png" alt="Focus Text" />
+			<img src="./assets/images/annual-report/coming-into.svg" alt="Coming into" class="w-2/5 transition-none"
+				style="opacity: 0" animate-hero-coming-into />
+			<img src="./assets/images/annual-report/focus.png" alt="Focus Text" class="transition-none"
+				style="opacity: 0" animate-hero-focus />
 		</div>
 	</section>
 
 	<!-- Two-Column Intro -->
-	<section class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
+	<section class=" grid grid-cols-1 md:grid-cols-2 gap-8 max-w-6xl mx-auto">
 		<div class="relative w-full h-full flex items-center justify-center aspect-video md:aspect-auto">
 			<img src="https://placehold.co/800x600?text=Video+Still" alt="Video Background"
 				class="absolute inset-0 w-full h-full object-cover z-0" />
