AR: Microphone animation v1

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -298,23 +298,30 @@
 		</div>
 
 		<!-- Content -->
-		<div class="bg-[#BDAD89] px-6 pt-12 p-16 flex flex-col justify-center text-white lg:px-16 lg:py-28">
-			<div class="flex items-start gap-4 mb-4">
+		<div class="bg-[#BDAD89] px-6 pt-12 p-16 flex flex-col gap-6 justify-center text-white lg:px-16 lg:py-28">
+			<div class="flex gap-4">
 
 				<h3 class="text-2xl font-semibold leading-tight m-0">
 					WHAT DOES IT<br />TAKE TO POWER<br />RURAL AMERICA?
 				</h3>
 
-				<div class="h-full flex items-stretch">
-					<img src="assets/images/annual-report/microphone.svg" alt="Microphone icon"
-						class="h-full object-contain" />
+				<div class="relative flex flex-grow">
+					<img src="assets/images/annual-report/microphone-sound-base.svg" alt="Microphone icon"
+						class="absolute bottom-0 w-24 object-contain" />
+					<img src="assets/images/annual-report/microphone-sound-waves.svg" alt="Microphone icon"
+						class="absolute bottom-0 w-24 object-contain transition-none" data-animate-mic />
+
 				</div>
 			</div>
-			<p class="mb-4 text-xl">
-				Join host Elizabeth Schilling as she uncovers bold ideas and personal stories at the Tri-State Annual
-				Meeting with cooperative leaders.
-			</p>
-			<a href="#" class="underline text-white">Listen to Western Watts here</a>
+			<div>
+
+				<p class="mb-4 text-xl">
+					Join host Elizabeth Schilling as she uncovers bold ideas and personal stories at the Tri-State
+					Annual
+					Meeting with cooperative leaders.
+				</p>
+				<a href="#" class="underline text-white">Listen to Western Watts here</a>
+			</div>
 		</div>
 	</section>
 
