AR: v5, edits from KB

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -100,7 +100,7 @@
 
 	<!-- bg-[#BDAD89] bg-yellow-700 -->
 	<!-- Quote: Reliability -->
-	<section class="bg-[#BDAD89] relative px-4 py-16 md:pl-8 md:pr-12">
+	<section class="overflow-hidden bg-[#BDAD89] relative px-4 py-16 md:pl-8 md:pr-12">
 		<img src="assets/images/annual-report/aperture-mobile.png" alt="" aria-hidden="true"
 			class="absolute -top-4 right-6 w-24 h-auto z-0 xl:right-12" />
 		<div class="relative z-10 mx-auto">
@@ -127,7 +127,7 @@
 
 
 	<!-- Quote: Financial Future -->
-	<section class="bg-[#6EA3A2] relative px-4 py-16 overflow-hidden md:pl-8 md:pr-12">
+	<section class="overflow-hidden bg-[#6EA3A2] relative px-4 py-16 md:pl-8 md:pr-12">
 		<img src="assets/images/annual-report/four-point-flower-mobile.png" alt="" aria-hidden="true"
 			class="absolute top-4 left-6 w-24 h-auto z-0 md:top-auto md:bottom-4 xl:left-12" />
 		<div class="relative z-10 mx-auto">
@@ -191,7 +191,7 @@
 	</section>
 
 	<!-- Feature: Preserving History -->
-	<section class="">
+	<section class="overflow-hidden">
 		<div class="lg:relative lg:aspect-auto lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:min-h-[600px]">
 
 			<div class="relative w-full aspect-[3/4] md:aspect-square md:pt-32 md:pb-6 lg:contents">
@@ -235,7 +235,7 @@
 	<section class="py-24 relative md:pl-0">
 		<div class="mx-auto md:grid md:grid-cols-2 md:gap-8 md:max-w-full">
 
-			<div class="relative flex flex-col">
+			<div class="relative overflow-hidden flex flex-col">
 
 				<div class="px-8 sm:w-fit sm:place-self-center md:pl-8 lg:pl-12 lg:max-w-sm">
 					<img src="assets/images/annual-report/flexing.svg" alt="Flexing Our Cooperative Strength"
@@ -249,7 +249,7 @@
 					data-animate-flexing-line />
 			</div>
 			<div class="px-8 md:pl-0 lg:p-0 lg:px-auto lg:grid lg:place-content-center">
-				<ul class="m-0 p-0 flex flex-col gap-4 overflow-hidden w-fit uppercase transition-none"
+				<ul class="overflow-hidden m-0 p-0 flex flex-col gap-4 w-fit uppercase transition-none"
 					data-animate-bullets>
 					<li class="flex items-start gap-2 transition-none tracking-widest track">
 						<img src="assets/images/annual-report/plus-light.svg" alt="Plus Icon" class="size-3 mt-1.5">
