--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -145,46 +145,46 @@
 					</p>
 				</div>
 
-				<div class="mx-auto mt-8  flex flex-wrap justify-center text-center">
-					<div class="basis-1/2 md:basis-1/4 flex flex-col">
-						<div class="m-2 bg-gray-light p-4 rounded flex-1">
-							<div class="text-2xl font-bold">1</div>
+				<div class="mx-auto mt-8 text-center md:flex md:flex-wrap md:justify-center">
+					<div class="md:basis-1/3 flex flex-col">
+						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
+							<div class="font-bold">1</div>
 							<div class="mt-2">Open and voluntary membership</div>
 						</div>
 					</div>
-					<div class="basis-1/2 md:basis-1/4 flex flex-col">
-						<div class="m-2 bg-gray-light p-4 rounded flex-1">
-							<div class="text-2xl font-bold">2</div>
+					<div class="md:basis-1/3 flex flex-col">
+						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
+							<div class="font-bold">2</div>
 							<div class="mt-2">Democratic member control</div>
 						</div>
 					</div>
-					<div class="basis-1/2 md:basis-1/4 flex flex-col">
-						<div class="m-2 bg-gray-light p-4 rounded flex-1">
-							<div class="text-2xl font-bold">3</div>
+					<div class="md:basis-1/3 flex flex-col">
+						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
+							<div class="font-bold">3</div>
 							<div class="mt-2">Members' economic participation</div>
 						</div>
 					</div>
-					<div class="basis-1/2 md:basis-1/4 flex flex-col">
-						<div class="m-2 bg-gray-light p-4 rounded flex-1">
-							<div class="text-2xl font-bold">4</div>
+					<div class="md:basis-1/3 flex flex-col">
+						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
+							<div class="font-bold">4</div>
 							<div class="mt-2">Autonomy and independence</div>
 						</div>
 					</div>
-					<div class="basis-1/2 md:basis-1/4 flex flex-col">
-						<div class="m-2 bg-gray-light p-4 rounded flex-1">
-							<div class="text-2xl font-bold">5</div>
+					<div class="md:basis-1/3 flex flex-col">
+						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
+							<div class="font-bold">5</div>
 							<div class="mt-2">Education, training and information</div>
 						</div>
 					</div>
-					<div class="basis-1/2 md:basis-1/4 flex flex-col">
-						<div class="m-2 bg-gray-light p-4 rounded flex-1">
-							<div class="text-2xl font-bold">6</div>
+					<div class="md:basis-1/3 flex flex-col">
+						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
+							<div class="font-bold">6</div>
 							<div class="mt-2">Cooperation among cooperatives</div>
 						</div>
 					</div>
-					<div class="basis-1/2 md:basis-1/4 flex flex-col">
-						<div class="m-2 bg-gray-light p-4 rounded flex-1">
-							<div class="text-2xl font-bold">7</div>
+					<div class="md:basis-1/3 flex flex-col">
+						<div class="m-2 bg-gray-light text-xl md:text-2xl p-4 rounded flex-1">
+							<div class="font-bold">7</div>
 							<div class="mt-2">Concern for community</div>
 						</div>
 					</div>
