Coop Diff: New Era - Content change

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -230,25 +230,22 @@
 				<div class="ts-expandable px-8 pt-12 pb-16" data-expandable>
 					<div class="ts-expander mx-auto max-w-2xl text-center text-balance">
 						<h3 class="font-serif font-light text-lg">New ERA</h3>
-						<p>
-							Tri-State was recently awarded $2.5 billion in financing through the U.S. Department of
-							Agriculture's Empowering Rural America (New ERA) Program. This program is the most
-							significant federal funding for rural electric cooperatives since 1936 and will help to
-							further our investments to meet growing energy demand and improve the reliability and
-							resiliency of our system.
-						</p>
-						<p>
-							The program, designed to help rural cooperatives implement reliable and affordable energy
-							transitions, will support the building of new energy projects and some transmission, as well
-							as the retirement of outdated sites. These projects will fight high energy costs and help
-							our members reach 70% clean energy use in 2030, reducing greenhouse gas emissions by nearly
-							5.8 million tons annually.
-						</p>
-						<p>
-							As part of the New ERA Program, we're also investing in rural communities and offering
-							community support, delivering on our commitment to our communities and those hosting our
-							energy projects.
-						</p>
+						<p>Tri-State was recently awarded $2.5 billion in financing through the U.S. Department of
+							Agriculture’s Empowering Rural
+							America (New ERA) Program. This program is the most significant federal funding for rural
+							electric cooperatives since
+							1936 and will help to further our investments to meet growing energy demand and improve the
+							reliability and resiliency
+							of our system.</p>
+
+						<p><strong>The program, designed to help rural cooperatives implement reliable and affordable
+								energy transitions, will support the
+								building of new energy projects as well as the retirement of outdated sites.</strong>
+							These projects will fight high energy costs
+							and help our members reach 70% clean energy used in 2030, reducing greenhouse gas emissions
+							by nearly 5.8 million tons
+							annually.</p>
+
 
 						<h3 class="mt-8 font-serif font-light text-lg">Electric Resource Planning</h3>
 						<p>
