Coop Diff: New section headings

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -215,12 +215,11 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="relative z-10 max-w-xl mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Energy Investments</h3>
+					<div class="px-4 relative z-10 mx-auto text-center">
+						<h3 class="mt-4 font-serif font-semibold text-xl">Energy Investments (New Era,
+							Electric Resource Plan)</h3>
 						<p class="mt-2 text-sm text-balance">
-							We empower members to make new investments and encourage an all-of-the-above resource
-							approach to drive rural economic
-							development.
+							An all-of-the-above approach to meet today’s energy needs
 
 						</p>
 					</div>
@@ -298,14 +297,12 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="relative z-10 max-w-xl mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Preserve and Protect</h3>
+					<div class="px-4 relative z-10 mx-auto text-center">
+						<h3 class="mt-4 font-serif font-semibold text-xl">Preserve and Protect (Wildifre
+							Mitigation, Workplace Safety)</h3>
 						<p class="mt-2 text-sm text-balance">
-							We keep our communities and employees safe as we uphold a culture of safety in the field, at
-							the office, and at home. We
-							protect the environment in the states we serve because it provides us with the abundant
-							natural resources that power our
-							communities.
+							Ensuring ‘safety first’ across our Western service
+							territory
 
 						</p>
 					</div>
@@ -386,11 +383,12 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="relative z-10 max-w-xl mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Good Neighbors</h3>
+					<div class="px-4 relative z-10 mx-auto text-center">
+						<h3 class="mt-4 font-serif font-semibold text-xl">Good Neighbors (Community
+							Engagement/Charitable Giving, Consumer Programs)</h3>
 						<p class="mt-2 text-sm text-balance">
-							We are good neighbors to the rural communities we serve, giving back and supporting our
-							local economies.
+							Giving back to the communities we serve
+							beyond the grid
 
 						</p>
 					</div>
@@ -462,12 +460,12 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="relative z-10 max-w-xl mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl text-balance">Shared Success</h3>
+					<div class="px-4 relative z-10 mx-auto text-center">
+						<h3 class="mt-4 font-serif font-semibold text-xl">Shared Success (Cooperative
+							Governance, Flexibility/BYOR)</h3>
 						<p class="mt-2 text-sm text-balance">
-							We're all in this together, working closely with our cooperative members to reach our energy
-							goals and ensure
-							affordability and reliability for our consumers.
+							Achieving affordability and reliability through the
+							cooperative business model
 
 						</p>
 					</div>
