Coop Diff: Good neighbors section heading

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -383,10 +383,11 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="px-4 relative z-10 mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl">Good Neighbors (Community
-							Engagement/Charitable Giving, Consumer Programs)</h3>
-						<p class="mt-2 text-sm text-balance">
+					<div class="px-4 relative z-10 mx-auto text-center flex flex-col gap-2">
+						<h3 class="p-0 m-0 font-serif font-semibold text-xl">Good Neighbors</h3>
+						<p class="p-0 m-0 !text-lg font-normal">Community
+							Engagement/Charitable Giving, Consumer Programs</p>
+						<p class="m-0 text-balance">
 							Giving back to the communities we serve
 							beyond the grid
 
