Coop Diff: Update heading sections to match demo

--- a/the-cooperative-difference.htm
+++ b/the-cooperative-difference.htm
@@ -215,13 +215,10 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="px-4 relative z-10 mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl">Energy Investments (New Era,
-							Electric Resource Plan)</h3>
-						<p class="mt-2 text-sm text-balance">
-							An all-of-the-above approach to meet today’s energy needs
-
-						</p>
+					<div class="px-4 relative z-10 mx-auto text-center flex flex-col gap-2">
+						<h3 class="p-0 m-0 font-serif font-semibold text-xl">Energy Investments</h3>
+						<p class="p-0 m-0 !text-lg font-normal">New Era, Electric Resource Plan</p>
+						<p class="m-0 text-balance">An all-of-the-above approach to meet today's energy needs</p>
 					</div>
 				</div>
 
@@ -297,14 +294,10 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="px-4 relative z-10 mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl">Preserve and Protect (Wildifre
-							Mitigation, Workplace Safety)</h3>
-						<p class="mt-2 text-sm text-balance">
-							Ensuring ‘safety first’ across our Western service
-							territory
-
-						</p>
+					<div class="px-4 relative z-10 mx-auto text-center flex flex-col gap-2">
+						<h3 class="p-0 m-0 font-serif font-semibold text-xl">Preserve and Protect</h3>
+						<p class="p-0 m-0 !text-lg font-normal">Wildfire Mitigation, Workplace Safety</p>
+						<p class="m-0 text-balance">Ensuring 'safety first' across our Western service territory</p>
 					</div>
 				</div>
 
@@ -461,14 +454,11 @@
 
 				<!-- Heading & Summary -->
 				<div class="bg-gray-light py-10">
-					<div class="px-4 relative z-10 mx-auto text-center">
-						<h3 class="mt-4 font-serif font-semibold text-xl">Shared Success (Cooperative
-							Governance, Flexibility/BYOR)</h3>
-						<p class="mt-2 text-sm text-balance">
-							Achieving affordability and reliability through the
-							cooperative business model
-
-						</p>
+					<div class="px-4 relative z-10 mx-auto text-center flex flex-col gap-2">
+						<h3 class="p-0 m-0 font-serif font-semibold text-xl">Shared Success</h3>
+						<p class="p-0 m-0 !text-lg font-normal">Cooperative Governance, Flexibility/BYOR</p>
+						<p class="m-0 text-balance">Achieving affordability and reliability through the cooperative
+							business model</p>
 					</div>
 				</div>
 
