AR: Podcast mic layout change

--- a/annual-report-2025.htm
+++ b/annual-report-2025.htm
@@ -298,20 +298,21 @@
 		</div>
 
 		<!-- Content -->
-		<div class="bg-[#BDAD89] px-6 pt-12 p-16 flex flex-col gap-6 justify-center text-white lg:px-16 lg:py-28">
-			<div class="flex gap-4">
-
-				<h3 class="text-2xl font-semibold leading-tight m-0">
-					WHAT DOES IT<br />TAKE TO POWER<br />RURAL AMERICA?
-				</h3>
-
-				<div class="relative flex flex-grow">
+		<div
+			class="bg-[#BDAD89] px-6 pt-10 p-16 flex flex-col gap-6 justify-center text-white lg:px-16 lg:pb-28 lg:pt-20">
+			<div class="relative flex flex-col gap-4">
+				<div class="relative">
 					<img src="assets/images/annual-report/microphone-sound-base.svg" alt="Microphone icon"
-						class="absolute bottom-0 w-24 object-contain" />
+						class="w-24" />
 					<img src="assets/images/annual-report/microphone-sound-waves.svg" alt="Microphone icon"
-						class="absolute bottom-0 w-24 object-contain transition-none" data-animate-mic />
+						class="absolute left-0 w-24 transition-none" data-animate-mic />
 
 				</div>
+				<h3 class="text-2xl font-semibold leading-tight m-0 text-pretty">
+					WHAT DOES IT TAKE TO POWER RURAL AMERICA?
+				</h3>
+
+
 			</div>
 			<div>
 
